# PTNzk

./: CMakeLists.txt  Priklad 2 .cpp  Priklad 3.cpp  Priklad1.cpp  Priklad1.h  Priklad13.cpp  Priklad14.cpp  Priklad18.cpp  Priklad19.cpp  Priklad20.cpp  Priklad4.cpp  main.cpp  priklad 7.cpp  priklad10.cpp  priklad11.cpp  priklad12.cpp  priklad15.cpp  priklad16.cpp  priklad17.cpp  priklad5.cpp  priklad6.cpp  priklad8.cpp  priklad9.cpp  priklad9.h  uspor.h
