cmake_minimum_required(VERSION 3.24)
project(PTNzk)

set(CMAKE_CXX_STANDARD 17)

add_executable(PTNzk main.cpp Priklad1.cpp Priklad1.h "Priklad 2 .cpp" "Priklad 3.cpp" Priklad4.cpp priklad5.cpp uspor.h priklad6.cpp "priklad 7.cpp" priklad8.cpp priklad9.cpp priklad9.h priklad10.cpp priklad11.cpp priklad12.cpp Priklad13.cpp Priklad14.cpp priklad15.cpp priklad16.cpp priklad17.cpp Priklad18.cpp Priklad19.cpp Priklad20.cpp)
